# radcopoly-agent

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
docs/: science_notes.md
outputs/: chains.csv  simulation_summary.csv
src/outputs/: simulation_summary.csv
src/radcopoly_agent/: analysis.py  build_copoldb_cache.py  copoldb_client.py  kmc_mayo_lewis.py  query_and_simulate.py  rdkit_utils.py  search_r_values.py
src/radcopoly_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
