[project]
name = "radcopoly-agent"
version = "0.1.0"
description = "Tools for radical copolymerization parameter lookup and simulation"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "beautifulsoup4",
    "pandas",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"